# CMakeSampleProject

./: CMakeLists.txt  Readme
lib/: CMakeLists.txt
lib/library1/: CMakeLists.txt  library1.cpp
lib/library1/include/: library1.hpp
lib/library2/: CMakeLists.txt  library2.cpp
lib/library2/include/: library2.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
